# agent_arc

./: .env.example  .gitignore  CLAUDE.md  CLEANUP_AND_MVP_PLAN.md  DIRECTORY_GUIDE.md  Dockerfile  GIT_WORKFLOW_GUIDE.md  README.md  SETUP_GUIDE.md  cloudbuild.yaml  listener.py  listener.py.backup  listener_backup.py  main.py  oauth_client.json  pyproject.toml  pyrightconfig.json  requirements.txt  roles_mapping.json  test_email.json  test_full_pipeline.py  test_oauth.py  test_pipeline.py  token.json
.github/workflows/: deploy.yml  test.yml
app/: __init__.py  main.py
app/models/: __init__.py  client_config.py  schemas.py
app/routers/: __init__.py  webhooks.py
app/services/: __init__.py  classifier.py  client_manager.py  dynamic_classifier.py  email_composer.py  email_sender.py  routing_engine.py  template_engine.py
app/utils/: __init__.py  client_loader.py  config.py  domain_resolver.py  email_templates.py
cli/: client_manager_cli.py  client_onboarding.py
clients/active/client-001-cole-nielson/: client-config.yaml  routing-rules.yaml
clients/active/client-001-cole-nielson/ai-context/: acknowledgment-prompt.md  classification-prompt.md  fallback-responses.yaml  team-analysis-prompt.md
clients/active/client-001-cole-nielson/branding/: colors.yaml
clients/templates/: onboarding-checklist.md
clients/templates/default/: categories.yaml  client-config.yaml  routing-rules.yaml  sla-config.yaml
common/: scopes.py
deployment/: main.py  requirements.txt
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DOCUMENTATION_CLEANUP_SUMMARY.md  MAILGUN_INTEGRATION.md  OAUTH2_UPGRADE_SUMMARY.md  PROFESSIONAL_IMPROVEMENTS.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  SECURITY_AND_CREDENTIALS_GUIDE.md  STRUCTURE_DECISIONS.md
examples/: anthropic_example.py  mailgun_send_example.py
functions/: __init__.py  analyze_email.py  analyze_email.py.backup  forward_and_draft.py  ingest_email.py
functions/email_router/: main.py  requirements.txt
migration/: INVENTORY.md
ml/: README.md
prompts/: classify_intent.md  draft_reply.md  extract_details.md
scripts/: README.md  smoke_test.py  test_gmail_auth.py  watch_gmail.py
src/: README.md
src/adapters/: __init__.py
src/adapters/email/: gmail.py  mailgun.py
src/adapters/llm/: README.md  gemini.py
src/adapters/memory/: README.md
src/agents/: README.md
src/api/: __init__.py  main.py
src/core/: __init__.py
src/core/ai/: __init__.py  ai_classifier.py
src/core/entities/: classification.py  email.py  routing_decision.py
src/core/interfaces/: analytics_sink.py  email_provider.py  llm_provider.py  memory_store.py
src/core/use_cases/: classify_email.py
src/email_router/: __init__.py
src/email_router/config/: __init__.py  env.py  logging_config.py  scopes.py
src/email_router/core/: __init__.py  analyze_email.py  forward_and_draft.py  ingest_email.py
src/email_router/handlers/: __init__.py  pubsub_handler.py
src/infrastructure/config/: settings.py
src/infrastructure/security/: README.md
src/shared/prompts/: prompt_manager.py
tasks/mvp/: week1_core_integration.md
tests/: __init__.py  test_listener.py  test_multi_tenant.py  test_webhook.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_full_pipeline.py  test_listener.py
tests/unit/: __init__.py
tools/: watch_gmail.py
